--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId 'com.example.myapplication'
         minSdk 28
         targetSdk 32
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -52,9 +52,18 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
     implementation 'com.github.kittinunf.fuel:fuel-rxjava:2.3.1'
     implementation 'com.github.kittinunf.fuel:fuel-gson:2.3.1'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+
+    implementation 'io.insert-koin:koin-core:3.2.0'
+    testImplementation 'io.insert-koin:koin-test:3.2.0'
+    implementation 'io.insert-koin:koin-android:3.2.0'
+
+    implementation 'io.insert-koin:koin-androidx-workmanager:3.2.0'
+    implementation 'io.insert-koin:koin-androidx-navigation:3.2.0'
+
 }
